# philipshue-rs

./: Cargo.toml  README.md
examples/: simple.rs
src/: bridge.rs  device.rs  error.rs  lib.rs  login.rs
src/discover/: discovery_url.rs  mod.rs
src/light/: display.rs  mod.rs  model.rs  state_change.rs
