[package]
name = "philipshue"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[features]
display = []

[dependencies]
async-trait = "0"
reqwest = { version = "0", default-features = false, features = ["json", "rustls-tls"] } # rustls-tls is required because we need to allow invalid certificates
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
